k3s-files/monitoring/portainer-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
